layout projetos html/css finalizados

--- a/views/projects/htmlcss.html
+++ b/views/projects/htmlcss.html
@@ -12,8 +12,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  
+    <link rel="stylesheet" href="/node_modules/@fortawesome/fontawesome-free/css/all.min.css">
     <title>Projetos</title>
 </head>
 <body id="projetos">
@@ -26,7 +26,7 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
           <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="#">Home</a>
+              <a class="nav-link" href="/demo/index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">About</a>
@@ -47,25 +47,49 @@
       </nav>
 
       <div class="container container-project">
-          <h1>Projetos desenvolvidos</h1>
+          <h1>Projetos desenvolvidos em HTML / CSS / Bootstrap</h1>
 
           <div class="row">
-            <div class="col-md-3">
+            <div class="col-md-4">
               <div class="thumbnail">
-                <a href="/w3images/lights.jpg">
+                <a href="https://github.com/kev1nnnnnnn/projeto-infusion">
                   <img src="/demo/img/infusion.PNG" alt="Lights" style="width:100%">
                   <div class="caption">
-                    <p>Lorem ipsum...</p>
+                    <p><i class="fa-brands fa-github"></i> Infusion</p> 
                   </div>
                 </a>
               </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-4">
               <div class="thumbnail">
-                <a href="/demo/img/infusion.PNG">
+                <a href="https://github.com/kev1nnnnnnn/Projeto-Hotel">
                   <img src="/demo/img/hotel.png" alt="Nature" style="width:100%">
                   <div class="caption">
-                    <p>Lorem ipsum...</p>
+                    <p><i class="fa-brands fa-github"></i> Rangers Hotel </p>
+                  </div>
+                </a>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="thumbnail">
+                <a href="https://esquinadotacaca.netlify.app/">
+                  <img src="/demo/img/esquinatacaca.PNG" alt="Fjords" style="width:100%">
+                  <div class="caption">
+                    <p> <i class="fa-brands fa-github"></i> Esquina do tacacá</p>
+                  </div>
+                </a>
+              </div>
+            </div>
+             
+          </div> <!--end row-->
+
+          <div class="row">
+            <div class="col-md-4">
+              <div class="thumbnail">
+                <a href="https://myfrotaonline.com.br/">
+                  <img src="/demo/img/myfrota.PNG" alt="Lights" style="width:100%">
+                  <div class="caption">
+                    <p><i class="fa-brands fa-github"></i> My frota online </p>
                   </div>
                 </a>
               </div>
@@ -73,27 +97,34 @@
             <div class="col-md-3">
               <div class="thumbnail">
                 <a href="/w3images/fjords.jpg">
-                  <img src="/demo/img/esquinatacaca.PNG" alt="Fjords" style="width:100%">
+                  <img src="/demo/img/netflix.png" alt="Fjords" style="width:100%">
                   <div class="caption">
-                    <p>Lorem ipsum...</p>
+                    <p><i class="fa-brands fa-github"></i> Netflix</p>
                   </div>
                 </a>
               </div>
             </div>
-            <div class="col-md-3">
-                <div class="thumbnail">
-                  <a href="/w3images/fjords.jpg">
-                    <img src="/demo/img/netflix.png" alt="Fjords" style="width:100%">
-                    <div class="caption">
-                      <p>Lorem ipsum...</p>
-                    </div>
-                  </a>
-                </div>
+            <div class="col-md-4">
+              <div class="thumbnail">
+                <a href="https://github.com/kev1nnnnnnn/Projeto-fashion">
+                  <img src="/demo/img/fashion.PNG" alt="Fjords" style="width:100%">
+                  <div class="caption">
+                    <p><i class="fa-brands fa-github"></i> Fashion </p>
+                  </div>
+                </a>
               </div>
-          </div>
+            </div>
+             
+          </div> <!--end row-->
       </div>
 
+      
     
+<script src="/node_modules/jquery/dist/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+  
+
 
     <script type="text/javascript">
     $(document).ready(function () {
