--- a/demo/css/style.css
+++ b/demo/css/style.css
@@ -65,7 +65,7 @@ canvas{
 
 #particles-js{
   width: 100%;
-  height: 80%;
+  height: 100%;
   background-color: #1c1c1c;
   background-image: url('');
   background-size: cover;
@@ -83,12 +83,16 @@ canvas{
   font-size: 50px;
   position: relative;
   font-family: 'Bebas Neue', cursive;
+  background-image: linear-gradient(to right,white, #00f777);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 .container h2 {
   font-size: 25px;
   margin-bottom: 3em;
   font-family: 'Bebas Neue', cursive;
   letter-spacing: 1.5px;
+  
 }
 .container .menu {
   font-family: 'Roboto', sans-serif;
@@ -101,6 +105,14 @@ canvas{
   color: white;
   border-radius: 10px;
   border: 1px solid #01543a;
+  letter-spacing: 3px;
+  line-height: 2em;
+  font-weight: 600;
+}
+.container .menu:hover{
+  background-color: white;
+  color: black;
+  transition: ease-in 0.5s;
 }
 .container select  {
   background-color: #012026;
@@ -113,14 +125,8 @@ canvas{
   background-color: white;
   color: black;
 }
-footer {
- 
-}
-footer .container {
-  bottom: 0;
-}
+
 footer .container p {
-  bottom: 0;
   padding: 2em;
   background-color: #012026;
 }
@@ -169,6 +175,22 @@ footer .container p {
   border: 1px solid white;
 
 }
+.contacts {
+  margin: 5em auto;
+  display: flex;
+  justify-content: space-around;
+}
+.contacts a {
+  
+  background-image: linear-gradient(to right,white, #00f777);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 60px;
+}
+
+
+
+
 
 
 /* ===============PROJETOS=============== */
@@ -190,4 +212,20 @@ footer .container p {
 .album .container .row .card img {
   max-width: 100%;
   height: auto;
+}
+.container-project h1 {
+  font-size: 35px;
+  margin: 1em auto;
+  background-image: linear-gradient(to right,white, #00f777);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+.container-project .row .thumbnail {
+  margin: 1em auto;
+}
+.container-project .row .thumbnail .caption p {
+  color: white;
+  margin: 20px;
+  font-size: 20px;
+  font-family: 'Roboto', sans-serif;;
 }
